Fix some QA